# app-hoster

./: .env.example  .gitignore  NOTICES  README.md  main.py  models.py  pyproject.toml  release_notes_markup.py  run.sh  schemas.py
templates/: base.html  get_latest.html  index.html
templates/components/: header.html  server_links_modal.html  sidebar.html  timeline.html  upload_modal.html
