[project]
name = "app-hoster"
version = "0.1.0"
description = "Minimal APK hosting platform (FastAPI + Jinja2 + Tailwind)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "packaging>=24.0",
]
