[tool.fastapi]
entrypoint = "main:app"

[project]
name = "app-hoster"
version = "0.1.0"
description = "Minimal APK hosting platform (FastAPI + Jinja2 + Tailwind)"
license = "CC-BY-4.0"
license-files = ["LICENSE", "NOTICES"]
requires-python = ">=3.11"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "packaging>=24.0",
    "fastapi[standard]>=0.135.3",
]
